src/test/deca/extension/context/invalid/uncompatible_array_type_declaration.deca
// Description:
//     Error in array declaration (incompatble type)
//
// Result:
//     INCOMPATIBLE_TYPE_ASSIGN: Cannot assign type int\[\] to variable of type int
//     line 9

{
    int[3][3] tab = { { {1, {2}, 3},  {1, 2, 3},  {{1}, {2}, 3} } }; 
}